# MinesweeperVariants

./: .gitignore  PROJECT.md  README.md  READMEcn.txt  TODO.md  img.bat  img.py  pyproject.toml  requirements.txt  run.bat  run.py  server.bat  update.bat  web.py  web.spec
abs/: Lrule.py  Mrule.py  Rrule.py  board.py  rule.py
config/: base_image_config.yaml  default.yaml
doc/: 更新日志.txt
doc/dev/: board_api.md  rule_clue.md  utils.md
impl/: impl_obj.py
impl/board/dye/: __init__.py  a.py  c.py  h.py  r.py
impl/board/version1/: board.py
impl/board/version2/: board.py
impl/rule/: __init__.py
impl/rule/Lrule/: -1M.py  (+37 more)
impl/summon/: game.py  solver.py  summon.py
main/: generate_game.py  generate_puzzle.py  generate_test.py
minesweepervariants/: __init__.py  api.py  build.bat  generate_game.py  generate_puzzle.py  generate_test.py  img.py  run.py  web.py  web.spec
minesweepervariants/abs/: Lrule.py  Mrule.py  Rrule.py  board.py  rule.py
minesweepervariants/config/: config.py
minesweepervariants/impl/: impl_obj.py
minesweepervariants/main/: generate_game.py  generate_puzzle.py  generate_test.py
minesweepervariants/scripts/: api.py  generate_game.py  generate_puzzle.py  generate_test.py  run.py  web.py
minesweepervariants/server/: __main__.py  _typing.py  config.py  format.py  model.py  router.py
minesweepervariants/utils/: element_renderer.py  image_create.py  tool.py  web_template.py
utils/: element_renderer.py  image_create.py  impl_obj.py  solver.py  tool.py
web/assets/: index-DMfG0DlI.css  index-Di2FewJ3.js
web/templates/: index.html
(+230 files in other folders)
